Updates URLs and resource paths for GitHub Pages deployment
Ensures all asset links and navigation paths work correctly
with the GitHub Pages structure. Improves resource loading and
user navigation consistency across the app.

--- a/metodos/2-sistemas-ecuaciones-lineales/gauss-seidel.html
+++ b/metodos/2-sistemas-ecuaciones-lineales/gauss-seidel.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Método de Gauss-Seidel</title>
-    <link rel="stylesheet" href="../../css/style.css">
+    <base href="https://santiagoglezch7.github.io/web_metodos_numericos/">
+    <link rel="stylesheet" href="css/style.css">
     <script id="MathJax-script" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.js"></script>
     </head>
 <body>
