--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú Principal - Metodos Numericos 1</title>
+    <base href="https://santiagoglezch7.github.io/web_metodos_numericos/">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
