--- a/metodos/1-ecuaciones-no-lineales/index.html
+++ b/metodos/1-ecuaciones-no-lineales/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecuaciones No Lineales</title>
-    <link rel="stylesheet" href="/css/style.css">
-
+    <base href="https://santiagoglezch7.github.io/web_metodos_numericos/">
+    <link rel="stylesheet" href="css/style.css">
     <script id="MathJax-script" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.js"></script>
+    <a href="menu.html" class="btn-regresar">...</a>
+    <script src="js/main.js"></script>
     </head>
 <body>
 
     <main class="container">
-        <a href="../../menu.html" class="btn-regresar">&larr; Regresar al Menú Principal</a>
+        <a href="menu.html" class="btn-regresar">&larr; Regresar al Menú Principal</a>
 
         <h1>1. Ecuaciones No Lineales</h1>
         
@@ -66,6 +68,6 @@
         </div>
     </footer>
 
-    <script src="../../js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
