--- a/metodos/3-factorizacion-lu/crout.html
+++ b/metodos/3-factorizacion-lu/crout.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Factorización de Crout</title>
-    <link rel="stylesheet" href="../../css/style.css">
+    <base href="https://santiagoglezch7.github.io/web_metodos_numericos/">
+    <link rel="stylesheet" href="css/style.css">
     <script id="MathJax-script" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
@@ -93,7 +94,7 @@
         </div>
     </footer>
 
-    <script src="../../js/main.js"></script>
-    <script src="../../js/calculos.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/calculos.js"></script>
 </body>
 </html>
