--- a/metodos/4-valores-vectores-propios/index.html
+++ b/metodos/4-valores-vectores-propios/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valores y Vectores Propios</title>
-    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script id="MathJax-script" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.js"></script>
     </head>
 <body>
 
     <main class="container">
-        <a href="../../menu.html" class="btn-regresar">&larr; Regresar al Menú Principal</a>
+        <a href="menu.html" class="btn-regresar">&larr; Regresar al Menú Principal</a>
 
         <h1>4. Valores y Vectores Propios</h1>
         
@@ -91,6 +91,6 @@
         </div>
     </footer>
 
-    <script src="../../js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
