--- a/metodos/4-valores-vectores-propios/potencia-inversa.html
+++ b/metodos/4-valores-vectores-propios/potencia-inversa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Método de la Potencia Inversa</title>
-    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script id="MathJax-script" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.js"></script>
     </head>
 <body>
@@ -123,7 +123,7 @@
         </div>
     </footer>
 
-    <script src="../../js/main.js"></script>
-    <script src="../../js/calculos.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/calculos.js"></script>
 </body>
 </html>
