Actualiza rutas de recursos y mejora la legibilidad de los archivos HTML

--- a/introduccion.html
+++ b/introduccion.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introducción - Metodos Numericos 1</title>
-    <base href="https://santiagoglezch7.github.io/web_metodos_numericos/">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <header class="portada-header">
-        <img src="img\Logo de la fes acatlan.jpg" alt="Logo UNAM" id="logo-1">
+        <img src="img/Logo de la fes acatlan.jpg" alt="Logo UNAM" id="logo-1">
         <h1>Métodos Numéricos 1</h1>
-        <img src="img\logo de MAC Fes acatlan.jpg" alt="Logo FES Acatlán" id="logo-2">
+        <img src="img/logo de MAC Fes acatlan.jpg" alt="Logo FES Acatlán" id="logo-2">
     </header>
 
     <main class="container">
