--- a/metodos/1-ecuaciones-no-lineales/index.html
+++ b/metodos/1-ecuaciones-no-lineales/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecuaciones No Lineales</title>
-    <base href="https://santiagoglezch7.github.io/web_metodos_numericos/">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <script id="MathJax-script" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.js"></script>
     <a href="menu.html" class="btn-regresar">...</a>
-    <script src="js/main.js"></script>
+    <script src="../../js/main.js"></script>
     </head>
 <body>
 
