Corrige rutas de archivos JavaScript en múltiples páginas HTML para asegurar la correcta carga de scripts

--- a/metodos/1-ecuaciones-no-lineales/biseccion.html
+++ b/metodos/1-ecuaciones-no-lineales/biseccion.html
@@ -30,7 +30,7 @@
             <form id="form-biseccion-1">
                 <label>Intervalo a: <input type="number" id="b1_a" value="1" step="any" required></label>
                 <label>Intervalo b: <input type="number" id="b1_b" value="2" step="any" required></label>
-                <label>Tolerancia: <input type_num="number" id="b1_tol" value="0.0001" step="any" required></label>
+                <label>Tolerancia: <input type="number" id="b1_tol" value="0.0001" step="any" required></label>
                 <button type="submit">Calcular Problema 1</button>
             </form>
             <div id="resultado-biseccion-1"></div>
@@ -65,6 +65,6 @@
     </footer>
 
     <script src="../../js/main.js"></script>
-    <script src="js/calculos.js"></script>
+    <script src="../../js/calculos.js"></script>
 </body>
 </html>
