--- a/metodos/2-sistemas-ecuaciones-lineales/jacobi.html
+++ b/metodos/2-sistemas-ecuaciones-lineales/jacobi.html
@@ -87,6 +87,6 @@
     </footer>
 
     <script src="../../js/main.js"></script>
-    <script src="js/calculos.js"></script>
+    <script src="../../js/calculos.js"></script>
 </body>
 </html>
