--- a/metodos/3-factorizacion-lu/index.html
+++ b/metodos/3-factorizacion-lu/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <main class="container">
-        <a href="menu.html" class="btn-regresar">&larr; Regresar al Menú Principal</a>
+        <a href="../../menu.html" class="btn-regresar">&larr; Regresar al Menú Principal</a>
 
         <h1>3. Factorización LU</h1>
         
