--- a/metodos/1-ecuaciones-no-lineales/index.html
+++ b/metodos/1-ecuaciones-no-lineales/index.html
@@ -6,13 +6,13 @@
     <title>Ecuaciones No Lineales</title>
     <link rel="stylesheet" href="../../css/style.css">
     <script id="MathJax-script" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.js"></script>
-    <a href="menu.html" class="btn-regresar">...</a>
+    <a href="../../menu.html" class="btn-regresar">...</a>
     <script src="../../js/main.js"></script>
     </head>
 <body>
 
     <main class="container">
-        <a href="menu.html" class="btn-regresar">&larr; Regresar al Menú Principal</a>
+        <a href="../../menu.html" class="btn-regresar">&larr; Regresar al Menú Principal</a>
 
         <h1>1. Ecuaciones No Lineales</h1>
         
