--- a/metodos/2-sistemas-ecuaciones-lineales/gauss-jordan.html
+++ b/metodos/2-sistemas-ecuaciones-lineales/gauss-jordan.html
@@ -79,6 +79,6 @@
     </footer>
 
     <script src="../../js/main.js"></script>
-    <script src="js/calculos.js"></script>
+    <script src="../../js/calculos.js"></script>
 </body>
 </html>
