--- a/metodos/3-factorizacion-lu/cholesky.html
+++ b/metodos/3-factorizacion-lu/cholesky.html
@@ -97,6 +97,6 @@
     </footer>
 
     <script src="../../js/main.js"></script>
-    <script src="js/calculos.js"></script>
+    <script src="../../js/calculos.js"></script>
 </body>
 </html>
