--- a/metodos/3-factorizacion-lu/crout.html
+++ b/metodos/3-factorizacion-lu/crout.html
@@ -94,6 +94,6 @@
     </footer>
 
     <script src="../../js/main.js"></script>
-    <script src="js/calculos.js"></script>
+    <script src="../../js/calculos.js"></script>
 </body>
 </html>
