--- a/metodos/4-valores-vectores-propios/potencia-inversa.html
+++ b/metodos/4-valores-vectores-propios/potencia-inversa.html
@@ -124,6 +124,6 @@
     </footer>
 
     <script src="../../js/main.js"></script>
-    <script src="js/calculos.js"></script>
+    <script src="../../js/calculos.js"></script>
 </body>
 </html>
